finished basic GUI, the code is messy though

--- a/test.html
+++ b/test.html
@@ -1,11 +1,10 @@
 <html>
 <head>
-<script 
-
-<script src="wuziqi.js"></script>
 </head>
 
 <body>
+<div id="wzq"></div>
+<script src="wuziqi.js"></script>
 
 </body>
 </head>
