added a new game link

--- a/test.html
+++ b/test.html
@@ -3,6 +3,7 @@
 </head>
 
 <body>
+<a href="#" onclick="javascript:createNewWuziQi()">New game</a>
 <div id="wzq"></div>
 <script src="wuziqi.js"></script>
 
